modules/mod-007-cicd-basics/exercise-04-k8s-deployment/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-api
  namespace: ml-api
  labels:
    app: ml-api
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: ClusterIP
  selector:
    app: ml-api
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  sessionAffinity: None
